tests/sksl/errors/InterfaceBlockStorageModifiers.glsl
### Compilation failed:

error: 1: modifier 'out' is not permitted on a struct field
uniform foo { out int x; };
              ^^^
1 error
